# raspberrypi-test

./: CMakeLists.txt  control.cpp  face_detection.cpp  face_following.cpp  image_capture.cpp
